# imitProgr

./: Advance.cpp  Advance.h  Advancer.cpp  Advancer.h  Barber.cpp  Barber.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Chanel.cpp  Chanel.h  Controller.cpp  Controller.h  Generator.cpp  Generator.h  Line.cpp  Line.h  Queue.cpp  Queue.h  README.md  Randomizer.cpp  Randomizer.h  Report.cpp  Report.h  ThresholdBuffer.cpp  ThresholdBuffer.h  ThresholdLine.cpp  ThresholdLine.h  Transfer.cpp  Transfer.h  main.cpp
